frontend/tests/errors/ER-018/std_math_array_lift_mixed_scalar_array/test.vx
// @rfc: docs/vexel-rfc.md#name-resolution--modules
// @desc: Bundled std::math phase-1 array lifting rejects scalar/array mixing until broadcasting semantics are implemented. | std::math phase-1 array lifting rejects scalar/array mixing

::std::math;

&^main() -> #i32 {
  xs:#f64[2] = [1.0, 4.0];
  ys:#f64[2] = std::math::pow(xs, 2.0);
  0
}
